TR-61162: тесты, разделение вопросов по типам, ДЗ 2