@@ -1,14 +1,15 @@
 package ru.baranova.spring.services;
 
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.TestConfiguration;
-import org.springframework.context.annotation.Bean;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
@@ -17,121 +18,157 @@ import ru.baranova.spring.dao.io.OutputDao;
 import ru.baranova.spring.domain.Answer;
 import ru.baranova.spring.domain.Option;
 import ru.baranova.spring.domain.Question;
-import java.util.Arrays;
+import ru.baranova.spring.domain.QuestionOneAnswer;
+import ru.baranova.spring.domain.QuestionWithOptionAnswers;
+import ru.baranova.spring.domain.QuestionWithoutAnswer;
 
+import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
 @DisplayName("Test class QuestionServiceImpl")
 @ExtendWith(value = {MockitoExtension.class, SpringExtension.class})
-@TestPropertySource("classpath:testApplication.properties")
-@ContextConfiguration(classes = {QuestionServiceImpl.class, QuestionServiceImplTestConfig.class})
+@TestPropertySource("classpath:questionServiceImplTest.properties")
+@ContextConfiguration(classes = {QuestionServiceImpl.class})
 class QuestionServiceImplTest {
     @Autowired
     private QuestionService questionServiceImpl;
-    @Autowired
+    @MockBean
     private InputDao inputDaoReader;
-    @Autowired
+    @MockBean
     private OutputDao outputDaoConsole;
-    @Captor
-    ArgumentCaptor<String> consoleArgumentCaptor;
-
-
+    @Value("${test.bean.questionServiceImplTest.question}")
     private String question;
+    @Value("${test.bean.questionServiceImplTest.rightAnswer}")
     private String rightAnswer;
+    @Value("${test.bean.questionServiceImplTest.optionOne}")
     private String optionOne;
+    @Value("${test.bean.questionServiceImplTest.optionTwo}")
     private String optionTwo;
-    private Question questionBean;
-    private int inputAnswer = 2;
+    private Question questionWithOptionAnswers;
+    private Question questionOneAnswer;
+    private Question questionWithoutAnswer;
 
     @BeforeEach
     void setUp() {
-        question = "Question First";
-        rightAnswer = "Answer Second";
-        optionOne = "Answer First";
-        optionTwo = "Answer Second";
-        questionBean = new Question(question, new Answer(rightAnswer), Arrays.asList(new Option(optionOne), new Option(optionTwo)));
-        questionServiceImpl = new QuestionServiceImpl(inputDaoReader, outputDaoConsole);
+        questionWithOptionAnswers = new QuestionWithOptionAnswers(question, new Answer(rightAnswer), List.of(new Option(optionOne), new Option(optionTwo)));
+        questionOneAnswer = new QuestionOneAnswer(question, new Answer(rightAnswer));
+        questionWithoutAnswer = new QuestionWithoutAnswer(question);
     }
 
     @Test
-    @DisplayName("Test class QuestionServiceImpl, method checkCorrect, check right answer")
-       public void shouldHaveTrueAnswer() {
-        Mockito.lenient().when(inputDaoReader.inputLine()).thenReturn(String.valueOf(inputAnswer));
-        boolean expected = questionServiceImpl.checkCorrect(questionBean, inputAnswer);
-        boolean actual = questionBean.getOptionAnswers().get(inputAnswer - 1).getOption()
-                            .equals(questionBean.getRightAnswer().getAnswer());
+    @DisplayName("Test class QuestionServiceImpl, method checkCorrect, check right answer by questionWithOptionAnswers")
+    void shouldHaveTrueAnswer_QuestionWithOptionAnswers() {
+        Assertions.assertTrue(questionServiceImpl.checkCorrectAnswer(questionWithOptionAnswers, "2"));
+    }
+
+    @Test
+    @DisplayName("Test class QuestionServiceImpl, method checkCorrect, check right answer by questionOneAnswer")
+    void shouldHaveTrueAnswer_QuestionOneAnswer() {
+        Assertions.assertTrue(questionServiceImpl.checkCorrectAnswer(questionOneAnswer, rightAnswer));
+    }
+
+    @Test
+    @DisplayName("Test class QuestionServiceImpl, method checkCorrect, check right answer by questionWithoutAnswer")
+    void shouldHaveTrueAnswer_QuestionWithoutAnswer() {
+        Assertions.assertTrue(questionServiceImpl.checkCorrectAnswer(questionWithoutAnswer, "some answer"));
+    }
+
+    @Test
+    @DisplayName("Test class QuestionServiceImpl, method checkCorrect, check wrong answer by questionWithOptionAnswers")
+    void shouldHaveFalseAnswer_QuestionWithOptionAnswers() {
+        Assertions.assertFalse(questionServiceImpl.checkCorrectAnswer(questionWithOptionAnswers, "1"));
+    }
+
+    @Test
+    @DisplayName("Test class QuestionServiceImpl, method checkCorrect, check wrong answer by questionOneAnswer")
+    void shouldHaveFalseAnswer_QuestionOneAnswer() {
+        Assertions.assertFalse(questionServiceImpl.checkCorrectAnswer(questionOneAnswer, rightAnswer + " "));
+    }
+
+    @Test
+    @DisplayName("Test class QuestionServiceImpl, method checkCorrect, check false if  NumberFormatException by questionWithOptionAnswers")
+    void shouldHaveFalseAnswer_QuestionWithOptionAnswers_NumberFormatException() {
+        Assertions.assertFalse(questionServiceImpl.checkCorrectAnswer(questionWithOptionAnswers, "rightAnswer"));
+    }
+
+    @Test
+    @DisplayName("Test class QuestionServiceImpl, method checkCorrect, check false if IndexOutOfBoundsException by questionWithOptionAnswers")
+    void shouldHaveFalseAnswer_QuestionWithOptionAnswers_IndexOutOfBoundsException() {
+        Assertions.assertFalse(questionServiceImpl.checkCorrectAnswer(questionWithOptionAnswers, "-1"));
+    }
+
+    @Test
+    @DisplayName("Test class QuestionServiceImpl, method getAnswer, check get answer by questionWithOptionAnswers")
+    void shouldHaveAnswer_QuestionWithOptionAnswers() {
+        String expected = String.valueOf(questionWithOptionAnswers.getOptionAnswers().size());
+        Mockito.lenient().when(inputDaoReader.inputLine()).thenReturn(expected);
+        String actual = questionServiceImpl.getAnswer(questionWithOptionAnswers);
         Assertions.assertEquals(expected, actual);
     }
 
-    // todo
-    @Disabled
     @Test
-    @DisplayName("Test class QuestionServiceImpl, method checkCorrect, check answer with big number")
-    public void shouldHaveFalseAnswer_NonexistentNumber() {
-        Mockito.lenient().when(inputDaoReader.inputLine()).thenReturn(String.valueOf(inputAnswer + 5))
-                .thenReturn(String.valueOf(inputAnswer))
-        ;
-        Throwable exception = assertThrows(IndexOutOfBoundsException.class, () -> {
-            questionServiceImpl.checkCorrect(questionBean, inputAnswer + 5);
-            Mockito.lenient().when(inputDaoReader.inputLine()).thenReturn(String.valueOf(inputAnswer));
-        });
-        Assertions.assertTrue(exception.getMessage().contains("Введен несуществующий номер, попробуйте снова"));
-    }
-    // todo
-    @Disabled
-    @Test
-    @DisplayName("Test class QuestionServiceImpl, method checkCorrect, check answer with big number")
-    public void shouldHaveFalseAnswer_NonexistentNumber2 () {
-        Mockito.when(inputDaoReader.inputLine())
-                .thenReturn(String.valueOf(5))
-                .thenThrow(IndexOutOfBoundsException.class)
-                .thenReturn(String.valueOf(2));
-        Throwable exception = assertThrows(IndexOutOfBoundsException.class, () -> {
-            questionServiceImpl.checkCorrect(questionBean, 5);
-        });
-        Assertions.assertEquals("Введен несуществующий номер, попробуйте снова", exception.getMessage());
-    }
-
-    @Test
-    @DisplayName("Test class QuestionServiceImpl, method checkCorrect, check wrong answer")
-    public void shouldHaveFalseAnswer_WrongNumber() {
-        Mockito.lenient().when(inputDaoReader.inputLine()).thenReturn(String.valueOf(1));
-        boolean expected = questionServiceImpl.checkCorrect(questionBean, 1);
-        boolean actual = questionBean.getOptionAnswers().get(0).getOption()
-                .equals(questionBean.getRightAnswer().getAnswer());
+    @DisplayName("Test class QuestionServiceImpl, method getAnswer, check answer after big number by questionWithOptionAnswers")
+    void shouldHaveAnswer_QuestionWithOptionAnswers_NonexistentNumber_Big() {
+        String expected = String.valueOf(questionWithOptionAnswers.getOptionAnswers().size());
+        Mockito.lenient().when(inputDaoReader.inputLine())
+                .thenReturn(String.valueOf(questionWithOptionAnswers.getOptionAnswers().size() + 10))
+                .thenReturn(expected);
+        String actual = questionServiceImpl.getAnswer(questionWithOptionAnswers);
         Assertions.assertEquals(expected, actual);
     }
 
-    // todo
-    @Disabled
     @Test
-    @DisplayName("Test class QuestionServiceImpl, method printQuestion, check print")
-    public void printQuestion() {
-        questionServiceImpl.printQuestion(questionBean);
-        Mockito.verify(outputDaoConsole).outputLine(consoleArgumentCaptor.capture());
-       /* Mockito.when(outputDaoConsole.outputLine(1 + ") " +  questionBean.getOptionAnswers().get(0).getOption()))
-                .thenCallRealMethod(System.out.println("Answer First"));
-        Mockito.when(outputDaoConsole.outputLine(1 + ") " +  questionBean.getOptionAnswers().get(0).getOption()))
-                .thenCallRealMethod(System.out.println("Answer Second"));*/
-        //assertEquals("Answer Second", consoleArgumentCaptor.getValue());
-        System.out.println();
-
-        assertAll("",
-                () -> assertEquals("Question First", consoleArgumentCaptor.getValue()),
-                () -> assertEquals("Answer First", consoleArgumentCaptor.getValue()),
-                () -> assertEquals("Answer Second", consoleArgumentCaptor.getValue())
-        );
+    @DisplayName("Test class QuestionServiceImpl, method getAnswer, check answer after small number by questionWithOptionAnswers")
+    void shouldHaveAnswer_QuestionWithOptionAnswers_NonexistentNumber_Small() {
+        String expected = String.valueOf(questionWithOptionAnswers.getOptionAnswers().size());
+        Mockito.lenient().when(inputDaoReader.inputLine()).thenReturn("0").thenReturn(expected);
+        String actual = questionServiceImpl.getAnswer(questionWithOptionAnswers);
+        Assertions.assertEquals(expected, actual);
     }
-}
 
-@TestConfiguration
-class QuestionServiceImplTestConfig {
-    @Bean
-    public InputDao getInputDaoReader() {
-        return Mockito.mock(InputDao.class);
+    @Test
+    @DisplayName("Test class QuestionServiceImpl, method getAnswer, check answer after small number by questionWithOptionAnswers")
+    void shouldHaveAnswer_QuestionWithOptionAnswers_Symbol() {
+        String expected = String.valueOf(questionWithOptionAnswers.getOptionAnswers().size());
+        Mockito.lenient().when(inputDaoReader.inputLine()).thenReturn("rightAnswer").thenReturn(expected);
+        String actual = questionServiceImpl.getAnswer(questionWithOptionAnswers);
+        Assertions.assertEquals(expected, actual);
     }
-    @Bean
-    public OutputDao getOutputDaoConsole() {
-        return Mockito.mock(OutputDao.class);
+
+    @Test
+    @DisplayName("Test class QuestionServiceImpl, method getAnswer, check get answer by questionOneAnswer")
+    void shouldHaveAnswer_QuestionOneAnswer() {
+        String expected = String.valueOf(questionOneAnswer.getRightAnswer());
+        Mockito.lenient().when(inputDaoReader.inputLine()).thenReturn(expected);
+        String actual = questionServiceImpl.getAnswer(questionOneAnswer);
+        Assertions.assertEquals(expected, actual);
+    }
+
+    @Test
+    @DisplayName("Test class QuestionServiceImpl, method getAnswer, check answer after small answer by questionOneAnswer")
+    void shouldHaveAnswer_QuestionOneAnswer_SmallAnswer() {
+        String expected = String.valueOf(questionOneAnswer.getRightAnswer());
+        Mockito.lenient().when(inputDaoReader.inputLine()).thenReturn("")
+                .thenReturn(expected);
+        String actual = questionServiceImpl.getAnswer(questionOneAnswer);
+        Assertions.assertEquals(expected, actual);
+    }
+
+    @Test
+    @DisplayName("Test class QuestionServiceImpl, method getAnswer, check get answer by questionWithoutAnswer")
+    void shouldHaveAnswer_QuestionWithoutAnswer() {
+        String expected = "rightAnswer";
+        Mockito.lenient().when(inputDaoReader.inputLine()).thenReturn(expected);
+        String actual = questionServiceImpl.getAnswer(questionWithoutAnswer);
+        Assertions.assertEquals(expected, actual);
+    }
+
+    @Test
+    @DisplayName("Test class QuestionServiceImpl, method getAnswer, check answer after small answer by questionWithoutAnswer")
+    void shouldHaveAnswer_QuestionWithoutAnswer_SmallAnswer() {
+        String expected = "rightAnswer";
+        Mockito.lenient().when(inputDaoReader.inputLine()).thenReturn("")
+                .thenReturn(expected);
+        String actual = questionServiceImpl.getAnswer(questionWithoutAnswer);
+        Assertions.assertEquals(expected, actual);
     }
 }
